{
  "version": 4,
  "terraform_version": "1.5.4",
  "serial": 25,
  "lineage": "1b5cf8bf-6141-71ef-64af-0850b5a79f50",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04581584ea8fe32d6",
            "domain": "vpc",
            "id": "eipalloc-04581584ea8fe32d6",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-216-103-85.compute-1.amazonaws.com",
            "public_ip": "3.216.103.85",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat-eip"
            },
            "tags_all": {
              "Name": "nat-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335426441:internet-gateway/igw-06a07f56ea9e12efa",
            "id": "igw-06a07f56ea9e12efa",
            "owner_id": "730335426441",
            "tags": {
              "Name": "main-igw"
            },
            "tags_all": {
              "Name": "main-igw"
            },
            "vpc_id": "vpc-0fc36de08d624d599"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.external.vpc_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04581584ea8fe32d6",
            "association_id": "eipassoc-0b055db37dec27073",
            "connectivity_type": "public",
            "id": "nat-0b58cb54cc7653a52",
            "network_interface_id": "eni-0ad180742774fd0e1",
            "private_ip": "10.0.78.23",
            "public_ip": "3.216.103.85",
            "subnet_id": "subnet-0f0e4632b38a4494a",
            "tags": {
              "Name": "main-nat"
            },
            "tags_all": {
              "Name": "main-nat"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.external.vpc_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0e13aa903dd882bda1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0b58cb54cc7653a52",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e13aa903dd882bda",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.external.vpc_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-06a07f56ea9e12efa",
            "id": "r-rtb-07202ff704705cb1d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07202ff704705cb1d",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.external.vpc_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335426441:route-table/rtb-0e13aa903dd882bda",
            "id": "rtb-0e13aa903dd882bda",
            "owner_id": "730335426441",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "main-private-rt"
            },
            "tags_all": {
              "Name": "main-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fc36de08d624d599"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.private",
            "aws_vpc.main",
            "data.external.vpc_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335426441:route-table/rtb-07202ff704705cb1d",
            "id": "rtb-07202ff704705cb1d",
            "owner_id": "730335426441",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "main-public-rt"
            },
            "tags_all": {
              "Name": "main-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fc36de08d624d599"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.public",
            "aws_vpc.main",
            "data.external.vpc_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0da9b2ae3bbc23aa7",
            "route_table_id": "rtb-0e13aa903dd882bda",
            "subnet_id": "subnet-0788e5b0230ad88ae"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route.private_nat_gateway",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.external.vpc_name"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0163791da661ed605",
            "route_table_id": "rtb-0e13aa903dd882bda",
            "subnet_id": "subnet-0159d4e5ca92b6ea9"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route.private_nat_gateway",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.external.vpc_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00f61f509199e8086",
            "route_table_id": "rtb-07202ff704705cb1d",
            "subnet_id": "subnet-0f0e4632b38a4494a"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route.public_internet_gateway",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.external.vpc_name"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-079ee55ed88f6cfa2",
            "route_table_id": "rtb-07202ff704705cb1d",
            "subnet_id": "subnet-0aec9ef6bbbfe752e"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route.public_internet_gateway",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.external.vpc_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335426441:subnet/subnet-0788e5b0230ad88ae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0788e5b0230ad88ae",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "730335426441",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-0",
              "kubernetes.io/cluster/demo_cluster": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "private-0",
              "kubernetes.io/cluster/demo_cluster": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0fc36de08d624d599"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.external.vpc_name"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335426441:subnet/subnet-0159d4e5ca92b6ea9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.32.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0159d4e5ca92b6ea9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "730335426441",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-1",
              "kubernetes.io/cluster/demo_cluster": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "private-1",
              "kubernetes.io/cluster/demo_cluster": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0fc36de08d624d599"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.external.vpc_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335426441:subnet/subnet-0f0e4632b38a4494a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.64.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f0e4632b38a4494a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "730335426441",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-0",
              "kubernetes.io/cluster/demo_cluster": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "public-0",
              "kubernetes.io/cluster/demo_cluster": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0fc36de08d624d599"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.external.vpc_name"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335426441:subnet/subnet-0aec9ef6bbbfe752e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.96.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0aec9ef6bbbfe752e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "730335426441",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-1",
              "kubernetes.io/cluster/demo_cluster": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "public-1",
              "kubernetes.io/cluster/demo_cluster": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0fc36de08d624d599"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.external.vpc_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335426441:vpc/vpc-0fc36de08d624d599",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ed5ba175b3900a14",
            "default_route_table_id": "rtb-0d9649934c06dab48",
            "default_security_group_id": "sg-04df3daf2fda224a6",
            "dhcp_options_id": "dopt-085263a0bb5d444f3",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0fc36de08d624d599",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d9649934c06dab48",
            "owner_id": "730335426441",
            "tags": {
              "Name": "vpc-1708218455"
            },
            "tags_all": {
              "Name": "vpc-1708218455"
            }
          },
          "dependencies": [
            "data.external.vpc_name"
          ]
        }
      ]
    }
  ]
}